--- a/cloverbazar/views/users/perfil.ejs
+++ b/cloverbazar/views/users/perfil.ejs
@@ -137,6 +137,9 @@
                     <p class="grid-input"> Direccion: <%=usuario.direccion%> </p>
                 </div>
                 <div class="grid-item">
+                    <p class="grid-input"> Provincia: <%=usuario.provincia%> </p>
+                </div>
+                <div class="grid-item">
                     <p class="grid-input"> Telefono: <%=usuario.telefono%> </p>
                 </div>
             </div>
