--- a/cloverbazar/views/users/passwordChange.ejs
+++ b/cloverbazar/views/users/passwordChange.ejs
@@ -1,9 +1,119 @@
-<link rel="stylesheet" href="/stylesheets/forms.css">
 
 <%-include('../partials/header', {title: 'Hola ' + usuario.nombre})%>
+<style>
+    main{
+        text-align: center;
+        display: flex;
+        flex-flow: column;
+        margin-top: 100px;
+        margin-bottom: 100px;
+    }
 
+    body{
+        display: flex;
+        flex-flow: column;
+        justify-content: space-between;
+        min-height: 100vh;
+    }
+
+    .section-form{
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        background-color: #faeded;
+        margin: 10px;
+        padding: 60px;
+        border-radius: 20px;
+    }
+
+    .options-container{
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        background-color: #faeded;
+        margin: 10px;
+        padding: 60px;
+        border-radius: 20px;
+    }
+
+    .options-container a{
+        color: #2e2e2e;
+    }
+
+    .forms{
+        max-width: 800px;
+    }
+
+    .grid-container{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 12px;
+        width: 350px;
+    }
+
+    .grid-item{
+        width: 100%;
+    }
+    
+    .grid-input{  
+        padding: 15px;
+        border: none;
+        border-bottom: solid 1px #bbb4be;
+        background: none;
+        width: 50%;
+    }
+
+    .grid-input:focus{
+        outline: none;
+    }
+
+    .guardar-cambios{
+        background-color: #2e2e2e;
+        color: white;
+        font-size: 18px;
+        border-style: none;
+        border-radius: 20px;
+        padding: 10px 20px 10px 20px;
+        margin-top: 50px;
+}
+
+    @media(min-width: 786px){
+        main{
+            margin: auto;
+            text-align: center;
+            display: flex;
+            flex-flow: row;
+            justify-content: space-around;
+            max-width: 1100px;
+        }
+
+        .section-form{
+            max-width: 600px;
+            display: flex;
+            flex-flow: column;
+            align-items: center;
+            background-color: #faeded;
+            margin: 10px;
+            padding: 60px;
+            border-radius: 20px;
+        }
+
+        .grid-container{
+            margin: auto;
+            max-width: 500px;
+        }
+
+        .grid-item{
+            width: 100%;
+        }
+        
+        .grid-input{  
+            max-width: 200px;
+        }
+    }
+
+</style>
 <main>
-    <h2>Cambiar contraseña </h2>
     <% if (typeof errors != "undefined"){ %>
         <ul style="padding: 0;">
             <% for (var i= 0; i< errors.length ; i++) { %>
@@ -14,13 +124,22 @@
     <% if(typeof errorAlLoguear != "undefined"){ %>
         <p style="color:red"><%= errorAlLoguear %></p>
     <% } %>
-    <div>
+    <section class="section-form">
+        <h2>Cambiar contraseña </h2>
         <form action="/users/password/<%=usuario.id%>" method="POST" class="forms">
-            <input type="password" name="password" placeholder="Contraseña anterior">
-            <input type="password" name="passwordNew" placeholder="Contraseña nueva">
-            <input type="password" name="confirmPasswordNew" placeholder="Confirmar contraseña nueva">
-            <button type="submit">Guardar cambios</button>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <input class="grid-input" type="password" name="password" placeholder="Contraseña anterior">
+                </div>
+                <div class="grid-item">
+                    <input class="grid-input" type="password" name="passwordNew" placeholder="Contraseña nueva">
+                </div>
+                <div class="grid-item">
+                    <input class="grid-input" type="password" name="confirmPasswordNew" placeholder="Confirmar contraseña nueva">
+                </div>
+            </div>
+            <button class="guardar-cambios" type="submit">Guardar cambios</button>
         </form>
-    </div> 
+    </section> 
 </main>
 <%-include('../partials/footer')%>
