--- a/cloverbazar/public/stylesheets/product.css
+++ b/cloverbazar/public/stylesheets/product.css
@@ -30,6 +30,7 @@ main section h3{
         font-weight: 400;
         color: rgb(46, 46, 46);
         padding-left: 10px;
+        margin: 5px;
     
     }
 main section a{
