--- a/cloverbazar/public/stylesheets/index.css
+++ b/cloverbazar/public/stylesheets/index.css
@@ -13,7 +13,6 @@ main section.carrusel{
 main section.carrusel img{
 object-fit: fill;
 width: 100%;
-/*le pongo altura para que no quede feo*/
 }
 main section.carrusel h1{ 
 text-align: center;
@@ -112,9 +111,9 @@ main section form button{
     background-color: rgb(46, 46, 46);
 }
 @media (min-width: 768px){
-    main section.carrusel img{
+ /*   main section.carrusel img{
         height: 300px;
-    }
+    }*/
     main section.productos article{
         width: 150px;
     }
@@ -130,15 +129,15 @@ main section form button{
     }
 }
 @media (min-width: 1024px){
-    main section.carrusel img{
+  /*  main section.carrusel img{
         height: 400px;
-    }
+    }*/
     main section.productos article{
         width: 230px;
     }
 }
 @media (min-width: 1350px){
-    main section.carrusel img{
+   /* main section.carrusel img{
         height: 500px;
-    }
+    }*/
 }
