--- a/cloverbazar/views/contacto.ejs
+++ b/cloverbazar/views/contacto.ejs
@@ -4,9 +4,7 @@
 <main>
     <section class="formulario-contacto">
         <form action="/mandarMail" method="POST">
-            <label for="Asunto">
-                Escribinos!
-            </label>
+            <h2>¡Escribinos!</h2>
             <input type="text" name="asunto" id="Asunto" placeholder="Asunto">
             <input type="email" name="email" placeholder="Email">
             <textarea name="mensaje" id="Mensaje" cols="30" rows="10" placeholder="Tu mensaje"></textarea>
