--- a/cloverbazar/public/stylesheets/contacto.css
+++ b/cloverbazar/public/stylesheets/contacto.css
@@ -37,7 +37,7 @@ main{
     border: 0;
     border-radius: 5px;
     margin: 5px 0;
-    padding: 5px;
+    padding: 10px;
     font-family: 'Libre Franklin', sans-serif;
 }
 
@@ -47,7 +47,7 @@ main{
     border-radius: 5px;
     margin: 5px 0;
     font-family: 'Libre Franklin', sans-serif;
-    padding: 5px;
+    padding: 10px;
 }
 
 .formulario-contacto button{
@@ -56,8 +56,9 @@ main{
     background-color:  rgb(46, 46, 46);
     border-radius: 5px;
     padding: 15px;
-    color: #fbdcc4;
+    color: white;
     background-color: rgb(46, 46, 46);
+    font-size: 22px;
 }
 
 .datos-contacto{
