--- a/cloverbazar/public/stylesheets/header.css
+++ b/cloverbazar/public/stylesheets/header.css
@@ -7,6 +7,10 @@ body{
     box-sizing:border-box;
 }
 
+#toggle{
+    display: none;
+}
+
 /*HEADER*/
     /*Barra superior HEADER*/
 header div.barra1 {
@@ -62,18 +66,13 @@ header div.barra2 nav ul a{
 header i{
     color: rgb(46, 46, 46);
 }
-/*cambio 1 -aca arranco los cambios del header 2-12-2020*/
-header i.fa-bars{
-font-size: 30px;
-}
-
 
 header div.loginButton button{
     border: 0;
     background-color:  rgb(46, 46, 46);
     border-radius: 5px;
     padding: 15px;
-    color: #fbdcc4;
+    color: white;
     background-color: rgb(46, 46, 46);
 
 }
@@ -109,31 +108,39 @@ header form.search-form button.search-form-button {
 }
 
 
-header div.menu nav.menu-hamburguesa ul {
+.menu-hamburguesa{
     display: none;
 }
 
-header div.menu nav.menu-hamburguesa ul li {
-    list-style: none;
-    border: 1px solid rgb(46, 46, 46);
-    background-color: #faeded;
-    border-radius: 5px;
-    width: 120px;
+header div.menu nav.menu-hamburguesa{
+    
+    width: 50%;
     text-align: center;
-    padding: 5px;
+    background-color: #faeded;
 }
 
-header div.menu nav.menu-hamburguesa ul a {
+header div.menu nav.menu-hamburguesa a {
+    display: block;
+    padding: 20px;
     text-decoration: none;
     color: rgb(46, 46, 46);
 }
 
-header div.menu:hover nav.menu-hamburguesa ul {
-    display: block;
+#toggle:checked + .menu-hamburguesa{
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
+    align-content: center;
     position: absolute;
-    right: 10px;
-    top: 100px;
+    right: 0;
+    top: 150px;
+    transition: all .2 ease-out;
 }
+
+.label-toggle{
+    font-size: 24px;
+}
+
 header i.fa-shopping-cart{
     font-size: 25px;
 }
@@ -205,6 +212,10 @@ footer nav ul li {
 
 @media(min-width:768px) {
     /*Cambios HEADER*/
+    .label-toggle{
+        display: none;
+    }
+
     header div.barra2 div.logo {
         width: 90px;
     }
@@ -288,6 +299,14 @@ footer nav ul li {
 }
 
 @media(min-width:1024px) {
+    .label-toggle{
+        display: none;
+    }
+
+    .menu{
+        display: none;
+    }
+
     header form.search-form {
         width: 150px;
     }
