--- a/cloverbazar/views/index.ejs
+++ b/cloverbazar/views/index.ejs
@@ -49,9 +49,7 @@
   </section>
   <section class="formulario">
     <form action="/mandarMail" method="POST">
-      <label for="Asunto">
-        Escribinos!
-      </label>
+      <h2 class="titulo-form">¡Escribinos!</h2>
       <input type="text" name="asunto" id="Asunto" placeholder="Asunto">
       <input type="email" name="email" placeholder="Email">
       <textarea name="mensaje" id="Mensaje" cols="30" rows="10" placeholder="Tu mensaje"></textarea>
