--- a/cloverbazar/public/stylesheets/cart.css
+++ b/cloverbazar/public/stylesheets/cart.css
@@ -86,6 +86,10 @@ form{
     margin-left: 10px;
 }
 
+.link-container {
+    margin-bottom: 100px;
+}
+
 .link-productos{
     margin-top: 40px;
     width: 150px;
