--- a/cloverbazar/views/carts/productCart.ejs
+++ b/cloverbazar/views/carts/productCart.ejs
@@ -65,7 +65,9 @@
         </form>
         <% } else { %>
         <h2 style="margin-bottom: 50px;">No hay productos para mostrar</h2>
-        <a href="/products/rubro" class="link-productos">Ir a Productos</a>
+        <div class="link-container">
+            <a href="/products/rubro" class="link-productos">Ir a Productos</a>
+        </div>
         <% } %>
     </section>
 
