--- a/cloverbazar/views/error.ejs
+++ b/cloverbazar/views/error.ejs
@@ -30,6 +30,7 @@
         text-decoration: none;
         color: #2e2e2e;
         box-shadow: 5px 5px 25px -9px rgba(0,0,0,0.75);
+        margin-bottom: 40px;
     }
 
     .ctas a:hover{
