--- a/cloverbazar/views/users/register.ejs
+++ b/cloverbazar/views/users/register.ejs
@@ -46,7 +46,9 @@
                 <div class="grid-item">
                     <input class="grid-input" type="text" name="direccion" id="direccion" placeholder="Direccion">
                 </div>
-                <div class="apiProvincias grid-item"></div>
+                <div class="grid-item">
+                    <select name='provincias' class='selectProvincias grid-input'></select>
+                </div>
 
             </div>
             <button class="guardar-cambios" type="submit">Registrate</button>
