--- a/cloverbazar/views/products/productDetail.ejs
+++ b/cloverbazar/views/products/productDetail.ejs
@@ -46,8 +46,8 @@
                                 <!-- Modal content -->
                                 <div class="modal-content">
                                     <span class="close-login">&times;</span>
-                                    <p>Debes loguearte para continuar</p>
-                                    <a href="/users/login">Iniciar sesion</a>
+                                    <p>Debes estar logueado para continuar</p>
+                                    <a href="/users/login">Iniciar sesión</a>
                                 </div>
 
                             </div>
