--- a/cloverbazar/views/products/productList.ejs
+++ b/cloverbazar/views/products/productList.ejs
@@ -1,29 +1,171 @@
-<link rel="stylesheet" href="/stylesheets/productList.css">
 
 <%-include('../partials/header', {title: 'Listado de productos'})%>
+<style>
+    main{
+    text-align: center;
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+}
+
+img{
+    display: block;
+    max-width: 100px;
+}
+
+form{
+    margin: auto;
+}
+
+.section-form{
+    max-width: 1100px;
+    display: flex;
+    flex-flow: column;
+    margin: 3rem auto;
+    padding: 20px;
+    position: relative;;
+}
+
+.section-form h2{
+    font-size: 2.5rem;
+}
+
+.grid-container{
+    border-bottom: solid 2px #fbdcc4;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    max-width: 280px;
+    position: relative;
+}
+
+
+.grid-item{
+    padding: 1rem;
+    align-self: center;
+}
+
+.confirmar-compra{
+    background-color: #2e2e2e;
+    color: white;
+    font-size: 18px;
+    border-style: none;
+    border-radius: 5px;
+    padding: 10px 20px 10px 20px;
+    margin: 0 auto;
+    text-decoration: none;
+}
+
+.ctas-container{
+    margin-top: 50px;
+}
+
+.seguir-comprando{
+    font-size: 14px;
+    color: black;
+    margin-left: 10px;
+}
+
+.total-compra{
+    margin: 40px;
+    font-size: 22px;
+}
+
+.total-precio{
+    font-weight: bold;
+    margin-left: 10px;
+}
+
+.link-container {
+    margin-bottom: 100px;
+}
+
+.link-productos{
+    margin-top: 40px;
+    width: 150px;
+    padding: 15px;
+    border: solid 4px #fbdcc4;
+    border-radius: 30px;
+    background-color: white;
+    text-align: center;
+    text-decoration: none;
+    color: #2e2e2e;
+    box-shadow: 5px 5px 25px -9px rgba(0,0,0,0.75);
+}
+
+.link-productos:hover{
+    background-color: #fbdcc4;
+    transition-duration: 200ms;
+}
+select{
+    padding: 10px;
+    background-color: rgb(46, 46, 46);
+    color: #fbdcc4;
+    border-radius: 5px;
+
+}
+select:hover{
+    cursor:pointer;
+    background-color: rgb(100,100,100);
+}
+
+.botones{
+    margin-bottom: 20px;
+}
+
+.botones a {
+    margin: 15px;
+}
+
+@media (min-width: 768px){
+    .grid-container{
+    border-bottom: solid 2px #fbdcc4;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    max-width: 900px;
+    position: relative;
+}
+}
+</style>
 <main>
     
-    <h2>Listado de productos</h2>
-    <section>
-        <div class="boton">
-            <a href="/products/create" class="botones">Crear producto </a>
-            <a href="/products/cambios" class="botones">Modificar Varios</a>
-            <a href="/products/inactivos" class="botones">Ver productos inactivos</a>
-            </div>
-        <%for(let i=0 ; i < productos.length ; i++) {%>
-
-        <article>
-            <%if( productos[i].imagenes.length > 0) {%>
-            <img src="/images/products/<%=productos[i].imagenes[0].ruta%>" alt="Imagen de producto">
-            <% } %>
-            <p class="nombre-producto"><%=productos[i].nombre%></p>
-            <p>$<%=productos[i].precio%></p>
-            <p><%=productos[i].descuento%>%</p>
-            <a href="/products/edit/<%=productos[i].id%>" class="links">EDITAR</a>
-            <a href="/products/destroy/<%=productos[i].id%>" class="links">ELIMINAR</a>
-        </article>
-        <%  } %>
-
+    
+    <section class="section-form">
+        <h2>Listado de productos</h2>
+        <div class="botones">
+            <a href="/products/create" class="confirmar-compra">Crear producto </a>
+            <a href="/products/cambios" class="confirmar-compra">Modificar Varios</a>
+            <a href="/products/inactivos" class="confirmar-compra">Productos inactivos</a>
+        </div>
+        <form action="">
+            <%for(let i=0 ; i < productos.length ; i++) {%>
+            <article class="grid-container">
+                <div class="grid-item">
+                    <%if( productos[i].imagenes.length > 0) {%>
+                    <img src="/images/products/<%=productos[i].imagenes[0].ruta%>" alt="Imagen de producto">
+                    <% } %>
+                </div>
+                <div class="grid-item">
+                    <p class="nombre-producto"><%=productos[i].nombre%></p>
+                </div>
+                <div class="grid-item">
+                    <p>$<%=productos[i].precio%></p>
+                </div>
+                <div class="grid-item">
+                    <p><%=productos[i].descuento%>%</p>
+                </div>
+                <div class="grid-item">
+                    <a href="/products/edit/<%=productos[i].id%>" class="confirmar-compra">EDITAR</a>
+                </div>
+                <div class="grid-item">
+                    <a href="/products/destroy/<%=productos[i].id%>" class="confirmar-compra">ELIMINAR</a>
+                </div>
+            </article>
+            <%  } %>
+        </form>
     </section>
 </main>
 <%-include('../partials/footer')%>
