--- a/cloverbazar/views/users/passwordChange.ejs
+++ b/cloverbazar/views/users/passwordChange.ejs
@@ -41,14 +41,16 @@
     }
 
     .forms{
+        display: flex;
+        flex-flow: column wrap;
         max-width: 800px;
+        align-items: center;
     }
 
     .grid-container{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 12px;
-        width: 350px;
     }
 
     .grid-item{
@@ -60,7 +62,6 @@
         border: none;
         border-bottom: solid 1px #bbb4be;
         background: none;
-        width: 50%;
     }
 
     .grid-input:focus{
@@ -68,27 +69,32 @@
     }
 
     .guardar-cambios{
-        background-color: #2e2e2e;
+        border: none;
+        border-radius: 5px;
+        padding: 15px;
+        width: 200px;
         color: white;
-        font-size: 18px;
-        border-style: none;
-        border-radius: 20px;
-        padding: 10px 20px 10px 20px;
-        margin-top: 50px;
-}
+        background-color: rgb(46, 46, 46);
+        font-size: 20px;
+        margin-top: 30px;
+    }
+    .error-style{
+        padding: 10px;
+        font-size: .8rem;
+        color: red;
+    }
 
     @media(min-width: 786px){
         main{
-            margin: auto;
             text-align: center;
             display: flex;
             flex-flow: row;
             justify-content: space-around;
-            max-width: 1100px;
         }
 
         .section-form{
-            max-width: 600px;
+            max-width: 700px;
+            width: 700px;
             display: flex;
             flex-flow: column;
             align-items: center;
