--- a/cloverbazar/views/index.ejs
+++ b/cloverbazar/views/index.ejs
@@ -4,10 +4,13 @@
 <%-include('./partials/header', {title: ''})%>
 <main>
   <section class="carrusel">
-    <a href="">
+
       <img src="/images/portada.png" alt="">
-    </a>
-    <br>
+
+    <div class="carrusel-content">
+      <h1>Clover Bazar</h1>
+      <p>Llevamos el bazar a tu casa</p>
+    </div>
   </section>
   <section class="secciones">
     <article>
