--- a/cloverbazar/public/stylesheets/index.css
+++ b/cloverbazar/public/stylesheets/index.css
@@ -7,24 +7,37 @@ body{
 }
 main section.carrusel{
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
+    margin-bottom: 50px;
+    position: relative;
 }
 main section.carrusel img{
-object-fit: fill;
-width: 100%;
+    object-fit: cover;
+    width: 100%;
+    height: 700px;
 }
-main section.carrusel h1{ 
-text-align: center;
-color: rgb(46, 46, 46);
-position: relative;
-bottom: 90px;
-font-weight: lighter;
-}
+
 main section.carrusel a{
     text-decoration: none;
     
 }
+
+.carrusel-content{
+    position: absolute;
+    top: 250px;
+}
+
+.carrusel-content h1{ 
+    font-size: 5rem;
+    text-align: center;
+    color: rgb(46, 46, 46);
+    margin: 0 0 40px 0;
+}
+
+.carrusel-content p {
+    text-align: center;
+    font-size: 2rem;
+}
+
 main section{
     display: flex;
     flex-wrap: wrap;
@@ -43,10 +56,10 @@ width: 100%;
 }
 main section.secciones h3{
     position: relative;
+    font-size: 1.7rem;
     font-weight: 400;
     color: rgb(46, 46, 46);
     text-align: left;
-    padding-left: 10px;
     position: relative;
 
 }
