--- a/cloverbazar/public/stylesheets/mayorista.css
+++ b/cloverbazar/public/stylesheets/mayorista.css
@@ -22,7 +22,7 @@ main h4 {
 main form{
     background-color: #fbdcc4;
     margin: 20px;
-    padding: 10px;
+    padding: 20px;
     text-align: center;
     max-width: 500px;
     border-radius: 15px;
@@ -37,7 +37,7 @@ main form input{
     border: 0;
     border-radius: 5px;
     margin: 5px 0;
-    padding: 5px;
+    padding: 10px;
     font-family: 'Libre Franklin', sans-serif;
 
 
@@ -48,15 +48,16 @@ main form textarea{
     border-radius: 5px;
     margin: 5px 0;
     font-family: 'Libre Franklin', sans-serif;
-    padding: 5px;
+    padding: 10px;
 }
 main form button{
     width: 95px;
     border: 0;
     background-color:  rgb(46, 46, 46);
     border-radius: 5px;
+    margin-top: 20px;
     padding: 15px;
-    color: #fbdcc4;
+    color: white;
     background-color: rgb(46, 46, 46);
 }
 main form button:hover{
